<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_time"
        android:orderInCategory="110"
        android:title="@string/action_time"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_theme_dark"
        android:orderInCategory="120"
        android:title="@string/action_theme_dark"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_author"
        android:orderInCategory="130"
        android:title="@string/action_author"
        />

</menu>