<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="25sp"
        android:gravity="center"

        >
    </TextView>
    <TextView
        android:id="@+id/tv_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="25sp"
        android:gravity="center"

        >
    </TextView>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        android:gravity="center"

        >
    </TextView>
    <TextView
        android:id="@+id/tv_patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patronymic"
        android:textSize="25sp"
        android:gravity="center"

        >
    </TextView>
    <TextView
        android:id="@+id/tv_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textSize="25sp"
        android:gravity="center"

        >
    </TextView>
    <TextView
        android:id="@+id/tv_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telephone"
        android:textSize="25sp"
        android:gravity="center"

        >
    </TextView>
    <TextView
        android:id="@+id/tv_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:textSize="25sp"
        android:gravity="center"

        >
    </TextView>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>